--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -37,12 +37,66 @@
     <div class="caja-dos">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, sunt? Itaque esse porro sunt, error autem repellendus impedit odit laboriosam rem eaque quia voluptas, consectetur, alias illo cum incidunt exercitationem?
     </div>
+    <hr>
 
     <h2>Cajas de Línea VS Cajas de Bloque</h2>
     <span class="caja-linea">Caja de linea</span>
     <div class="caja-bloque">
         Caja de bloque
     </div>
+    <hr>
+
+    <h2>Propiedad display</h2>
+    <!-- Valores:
+    inline
+    block
+    inline-block Se comporta como un elemento de linea pero acepta
+    modificar sus dimensiones de alto y ancho
+    none
+    table
+    list-item
+    flex- curso
+    grid - curso
+    -->
+
+    <div class="caja-none">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
+    </div>
+
+    <spam class="caja-linea-bloque">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, sint? Doloribus praesentium numquam, suscipit quam veniam cum esse vel non quisquam ipsam nemo! Minima ratione illum vitae ipsum in repellendus.
+    </spam>
+
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat vero similique labore nihil consequuntur dicta, et exercitationem atque, cumque veritatis porro, sequi laborum accusantium hic possimus vel. Adipisci, nam rem?</p>
+    <ul>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ul>
+    <ol>
+        <li>Item 1</li>
+        <li>Item 2</li>
+        <li>Item 3</li>
+        <li>Item 4</li>
+    </ol>
+    <table>
+       <tr>
+            <td>Celda 1</td>
+            <td>Celda 2</td>
+            <td>Celda 3</td>
+       </tr>
+       <tr>
+            <td>Celda 4</td>
+            <td>Celda 5</td>
+            <td>Celda 6</td>
+       </tr>
+       <tr>
+            <td>Celda 7</td>
+            <td>Celda 8</td>
+            <td>Celda 9</td>
+       </tr>
+    </table>
 
     <a href="index.html#temario-css">☝️</a>
 </body>
