--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -97,6 +97,16 @@
             <td>Celda 9</td>
        </tr>
     </table>
+    <hr>
+
+    <h2>Propiedad visibility</h2>
+    <div class="caja-none">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
+    </div>
+
+    <div class="caja-hidden">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
+    </div>
 
     <a href="index.html#temario-css">☝️</a>
 </body>
