--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -107,6 +107,13 @@
     <div class="caja-hidden">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
     </div>
+    <hr>
+
+    <h2>Propiedad Overflow</h2>
+    <!-- lo que pasará con el contenido que desborde de su caja contenedora -->
+    <p class="overflow">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet asperiores inventore cumque pariatur culpa ipsa! Corporis, id impedit. Reprehenderit nemo unde tempora est. Ipsa tempora assumenda nobis odit voluptates itaque.
+    </p> <!-- el contenido desborda su caja -->
 
     <a href="index.html#temario-css">☝️</a>
 </body>
