--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -7,8 +7,21 @@
     <link rel="stylesheet" href="css/box-model.css">
 </head>
 <body>
+
+    <h2 id="temario">Temario del curso</h2>
+        <ul>
+            <li><a href="box-model.html#modelo-caja">Modelo de caja en CSS</a></li>
+            <li><a href="box-model.html#padding-border">Padding y border</a></li>
+            <li><a href="box-model.html#box-line-block">Cajas de Línea VS Cajas de Bloque</a></li>
+            <li><a href="box-model.html#display">Propiedad display</a></li>
+            <li><a href="box-model.html#visibility">Visibility</a></li>
+            <li><a href="box-model.html#overflow">Propiedad Overflow</a></li>
+            <li><a href="box-model.html#tamanio-caja">Tamaño de caja</a></li>
+            <li><a href="box-model.html"></a></li>
+            <li><a href="box-model.html"></a></li>
+        </ul>
     <!-- https://developer.mozilla.org/es/docs/Learn/CSS/Building_blocks/The_box_model -->
-    <H1>Modelo de caja en CSS</H1>
+    <H1 id="modelo-caja">Modelo de caja en CSS</H1>
     <!-- Es la forma en que CSS ve a los elementos html y ¿cómo los ve? como si fueran cajas con las
         siguientes propiedades 
         1. El contenido(content): El contenido(texto) del elemento HTML, tomando en cuenta sus limitaciones(width y height)
@@ -29,24 +42,28 @@
         Architecto sapiente repellat quod laborum tempora nemo accusamus temporibus sed! Inventore, ab. 
         Fugiat explicabo impedit exercitationem aspernatur praesentium quam ipsa quis sint?
     </p>
+    <a href="box-model.html#temario">☝️</a>
     <hr>
     
+    <h2 id="padding-border">Padding y border</h2>
     <div class="caja-uno">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nobis nisi facere iure provident, dolorem aliquam optio commodi, harum amet earum saepe ullam, ut sapiente dolore. Voluptas quisquam id soluta.
     </div>
     <div class="caja-dos">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt, sunt? Itaque esse porro sunt, error autem repellendus impedit odit laboriosam rem eaque quia voluptas, consectetur, alias illo cum incidunt exercitationem?
     </div>
+    <a href="box-model.html#temario">☝️</a>
     <hr>
 
-    <h2>Cajas de Línea VS Cajas de Bloque</h2>
+    <h2 id="box-line-block">Cajas de Línea VS Cajas de Bloque</h2>
     <span class="caja-linea">Caja de linea</span>
     <div class="caja-bloque">
         Caja de bloque
     </div>
+    <a href="box-model.html#temario">☝️</a>
     <hr>
 
-    <h2>Propiedad display</h2>
+    <h2 id="display">Propiedad display</h2>
     <!-- Valores:
     inline
     block
@@ -97,9 +114,10 @@
             <td>Celda 9</td>
        </tr>
     </table>
+    <a href="box-model.html#temario">☝️</a>
     <hr>
 
-    <h2>Propiedad visibility</h2>
+    <h2 id="visibility">Propiedad visibility</h2>
     <div class="caja-none">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
     </div>
@@ -107,14 +125,38 @@
     <div class="caja-hidden">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta nostrum, ipsa eum voluptatibus quos odio voluptate facere, fuga officia, velit quae rerum? Nobis earum optio dolor reprehenderit cupiditate voluptatum hic.
     </div>
+    <a href="box-model.html#temario">☝️</a>
     <hr>
 
-    <h2>Propiedad Overflow</h2>
+    <h2 id="overflow">Propiedad Overflow</h2>
     <!-- lo que pasará con el contenido que desborde de su caja contenedora -->
     <p class="overflow">
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Amet asperiores inventore cumque pariatur culpa ipsa! Corporis, id impedit. Reprehenderit nemo unde tempora est. Ipsa tempora assumenda nobis odit voluptates itaque.
     </p> <!-- el contenido desborda su caja -->
 
-    <a href="index.html#temario-css">☝️</a>
+    <a href="box-model.html#temario">☝️</a>
+    <hr>
+
+    <h2 id="tamanio-caja">Tamaño de caja</h2>
+    <div class="box-sizing-content">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, repudiandae fuga obcaecati laborum, cumque architecto rerum atque sint est culpa consectetur repellendus qui aliquid odio sunt velit pariatur illo ipsam?
+    </div>
+
+    <div class="box-sizing-border">
+        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti, repudiandae fuga obcaecati laborum, cumque architecto rerum atque sint est culpa consectetur repellendus qui aliquid odio sunt velit pariatur illo ipsam?
+    </div>
+
+    <article class="container-col-3">
+        <section class="item">Sección 1</section>
+        <section class="item">Sección 2</section>
+        <section class="item">Sección 3</section>
+    </article>
+    <a href="box-model.html#temario">☝️</a>
+    <hr>
+
+    <h2 id=""></h2>
+
+
+
 </body>
 </html>
