margin vertical collapse

--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -18,7 +18,7 @@
             <li><a href="box-model.html#overflow">Propiedad Overflow</a></li>
             <li><a href="box-model.html#tamanio-caja">Tamaño de caja</a></li>
             <li><a href="box-model.html#float-clear">Propiedad Float & Clear</a></li>
-            <li><a href="box-model.html"></a></li>
+            <li><a href="box-model.html#collapse">Colapso de márgenes verticales</a></li>
         </ul>
     <!-- https://developer.mozilla.org/es/docs/Learn/CSS/Building_blocks/The_box_model -->
     <H1 id="modelo-caja">Modelo de caja en CSS</H1>
@@ -175,6 +175,21 @@
             perferendis voluptatum suscipit animi voluptate eveniet fugit?
         </section>
     </article>
+
+    <a href="box-model.html#temario">☝️</a>
+    <hr>
+
+    <h2 id="collapse">Colapso de márgenes verticales</h2>
+    <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Architecto, tempora! Tempore beatae, commodi dolore maxime nisi molestias reprehenderit repellat vitae reiciendis quaerat expedita minima dicta, ratione voluptatum. Molestias, in ratione.</div>
+    <article class="margin-collapse">
+        <section>Sección 1</section>
+        <section>Sección 2</section>
+    </article>
+    <!-- los margenes verticales de un elemento con otro elemento se pisan, se enciman.
+    Es recomendable no poner a todos los elementos margin top y botton, se van a encimar.
+    Entonces ocupar margin top o botton, no los dos -->
+
+
     <!-- https://960.gs/ -->
 
     <a href="box-model.html#temario">☝️</a>
