--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -184,10 +184,17 @@
     <article class="margin-collapse">
         <section>Sección 1</section>
         <section>Sección 2</section>
+
+        <section>
+            <span>Span 1</span>
+            <span>Span 2</span>
+            <span>Span 3</span>
+        </section>
     </article>
-    <!-- los margenes verticales de un elemento con otro elemento se pisan, se enciman.
+    <!-- los márgenes verticales de un elemento con otro elemento se pisan, se enciman.
     Es recomendable no poner a todos los elementos margin top y botton, se van a encimar.
-    Entonces ocupar margin top o botton, no los dos -->
+    Entonces ocupar margin top o botton, no los dos
+    Los márgenes izquierdos y derechos no se superponen -->
 
 
     <!-- https://960.gs/ -->
