--- a/video-css-2/box-model.html
+++ b/video-css-2/box-model.html
@@ -19,6 +19,7 @@
             <li><a href="box-model.html#tamanio-caja">Tamaño de caja</a></li>
             <li><a href="box-model.html#float-clear">Propiedad Float & Clear</a></li>
             <li><a href="box-model.html#collapse">Colapso de márgenes verticales</a></li>
+            <li><a href="box-model.html#box">Centrado de cajas</a></li>
         </ul>
     <!-- https://developer.mozilla.org/es/docs/Learn/CSS/Building_blocks/The_box_model -->
     <H1 id="modelo-caja">Modelo de caja en CSS</H1>
@@ -196,12 +197,22 @@
     Entonces ocupar margin top o botton, no los dos
     Los márgenes izquierdos y derechos no se superponen -->
 
-
-    <!-- https://960.gs/ -->
-
     <a href="box-model.html#temario">☝️</a>
     <hr>
 
+    <h2 id="box">Centrado de cajas</h2> <!-- margin right y left AUTO -->
+    <article class="sitio-web">
+        <header>Cabecera</header>
+        <main>Contenido principal</main>
+        <footer>Pie de página</footer>
+    </article>
+    <a href="box-model.html#temario">☝️</a>
+    <hr>
+    
+
+    <a href="box-model.html#temario">☝️</a>
+    <hr>
+    <!-- https://960.gs/ -->
 
 </body>
 </html>
