--- a/video-css-2/positions.html
+++ b/video-css-2/positions.html
@@ -15,7 +15,9 @@
             <li><a href="positions.html#"> </a></li>
         </ul>
 
-        
+        <div class="static">Caja estática</div>
+
+
 
     <a href="positions.html#temario">☝️</a>
     <hr>
