--- a/video-css-2/positions.html
+++ b/video-css-2/positions.html
@@ -12,10 +12,22 @@
 
     <h2 id="temario">Temario del curso</h2>
         <ul>
-            <li><a href="positions.html#"> </a></li>
+            <li><a href="positions.html#static">Posicionamiento estático</a></li>
+            <li><a href="positions.html#relative">Posicionamiento relativo</a></li>
         </ul>
 
+    
+        <h2 id="static">Estático</h2>
         <div class="static">Caja estática</div>
+
+        <a href="positions.html#temario">☝️</a>
+        <hr>
+
+        <h2 id="relative">Relativo</h2>
+        <div class="relative">Caja relativa</div>
+
+        <a href="positions.html#temario">☝️</a>
+        <hr>
 
 
 
