--- a/video-css-2/positions.html
+++ b/video-css-2/positions.html
@@ -14,6 +14,7 @@
         <ul>
             <li><a href="positions.html#static">Posicionamiento estático</a></li>
             <li><a href="positions.html#relative">Posicionamiento relativo</a></li>
+            <li><a href="positions.html#absolute">Posicionamiento absoluto</a></li>
         </ul>
 
     
@@ -28,6 +29,19 @@
 
         <a href="positions.html#temario">☝️</a>
         <hr>
+
+        <h2 id="absolute">Absoluto</h2>
+        <div class="absolute">Caja absoluta</div>
+        <section class="relative-parent">
+            <div class="absolute-child">
+                Caja absoluta con ancestro relativo
+            </div>
+        </section>
+
+        <a href="positions.html#temario">☝️</a>
+        <hr>
+
+    <p>lorem</p>
 
 
 
