--- a/video-css-2/positions.html
+++ b/video-css-2/positions.html
@@ -15,6 +15,7 @@
             <li><a href="positions.html#static">Posicionamiento estático</a></li>
             <li><a href="positions.html#relative">Posicionamiento relativo</a></li>
             <li><a href="positions.html#absolute">Posicionamiento absoluto</a></li>
+            <li><a href="positions.html#fix">Posicionamiento fijo</a></li>
         </ul>
 
     
@@ -38,15 +39,16 @@
             </div>
         </section>
 
+        <h2 id="fix">Posicionamiento fijo</h2>
+        <div class="fixed">Caja fija</div>
+
         <a href="positions.html#temario">☝️</a>
-        <hr>
+        <hr> 
 
-    <p>lorem</p>
-
+        <br><br><br><br><br>
 
 
     <a href="positions.html#temario">☝️</a>
-    <hr>
 
 </body>
 </html>
