--- a/video-css-2/positions.html
+++ b/video-css-2/positions.html
@@ -16,6 +16,7 @@
             <li><a href="positions.html#relative">Posicionamiento relativo</a></li>
             <li><a href="positions.html#absolute">Posicionamiento absoluto</a></li>
             <li><a href="positions.html#fix">Posicionamiento fijo</a></li>
+            <li><a href="positions.html#sticky">Posicionamiento pegajoso-sticky</a></li>
         </ul>
 
     
@@ -45,6 +46,21 @@
         <a href="positions.html#temario">☝️</a>
         <hr> 
 
+        <h2 id="sticky">Pegajosa</h2>
+        <!-- <section></section> si estuviera aca el sticky no funcionaria, en teoria-->
+        <div class="sticky">Caja sticky</div>
+        <section class="sticky-parent">
+            <div class="sticky-child">Caja Pegajosa hijo</div>
+        </section>
+
+        <a href="positions.html#temario">☝️</a>
+        <hr> 
+
+
+        <br><br><br><br><br>
+        <br><br><br><br><br>
+        <br><br><br><br><br>
+        <br><br><br><br><br>
         <br><br><br><br><br>
 
 
