example title slide with sticky

--- a/video-css-2/positions-examples.html
+++ b/video-css-2/positions-examples.html
@@ -16,6 +16,150 @@
     <h1>Ejercicios de posicionamiento</h1>
     <h2>Cabecera fija vs cabecera pegajosa</h2>
 
+    <h2>Efecto sticky tipo slides</h2>
+    <section class="slides">
+        <article class="slide">
+            <h3 class="slide-title">Titulo de la sección</h3> 
+            <div class="slide-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+            </div>
+        </article>
+        <article class="slide">
+            <h3 class="slide-title">Titulo de la sección</h3> 
+            <div class="slide-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+            </div>
+        </article>
+        <article class="slide">
+            <h3 class="slide-title">Titulo de la sección</h3> 
+            <div class="slide-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+            </div>
+        </article>
+        <article class="slide">
+            <h3 class="slide-title">Titulo de la sección</h3> 
+            <div class="slide-content">
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo quisquam repudiandae in, vel, tempora sapiente earum sit quasi atque rem qui blanditiis natus magni laudantium numquam temporibus omnis debitis quis.
+                </p>
+            </div>
+        </article>
+    </section>
+
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
