--- a/video-css-2/positions-examples.html
+++ b/video-css-2/positions-examples.html
@@ -160,6 +160,24 @@
         </article>
     </section>
 
+    <h2>Efecto de ventana modal / menú movil</h2>
+    <article id="modal-1" class="modal-window">
+        <h3 class="modal-title">Ventana modal</h3>
+        <div class="modal-content">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus perferendis sit, itaque sed impedit eligendi nemo voluptatem adipisci nobis vero ipsam reiciendis quas a voluptas similique. Excepturi laboriosam molestiae recusandae.
+            </p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus perferendis sit, itaque sed impedit eligendi nemo voluptatem adipisci nobis vero ipsam reiciendis quas a voluptas similique. Excepturi laboriosam molestiae recusandae.
+            </p>
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Possimus perferendis sit, itaque sed impedit eligendi nemo voluptatem adipisci nobis vero ipsam reiciendis quas a voluptas similique. Excepturi laboriosam molestiae recusandae.
+            </p>
+        </div>
+        <a href="#cerrar">Cerrar modal</a>
+    </article>
+    <a href="#modal-1" class="modal-link">Abrir modal</a>
+
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
