margenes negativos e indice

--- a/video-css-2/positions-examples.html
+++ b/video-css-2/positions-examples.html
@@ -7,16 +7,28 @@
     <link rel="stylesheet" href="css/positions-examples.css">
 </head>
 <body>
+
+    <h1>Ejercicios de posicionamiento</h1>
+    <h2 id="temario-css">Temario del curso</h2>
+        <ul>
+            <li><a href="positions-examples.html#cabeceras">Cabecera fija vs cabecera pegajosa</a></li>
+            <li><a href="positions-examples.html#sticky">Efecto sticky tipo slides</a></li>
+            <li><a href="positions-examples.html#ventana-modal">Efecto de ventana modal</a></li>
+            <li><a href="positions-examples.html#margenes-negativos">Márgenes negativos</a></li>
+        </ul>
+
     <div class="hero-image"></div>
     
     <header class="header sticky-top"><!-- fixed-top -->
         <div>Contenido de la cabecera</div>
     </header><!-- por cascada, funciona mejor el sticky en el header -->
 
-    <h1>Ejercicios de posicionamiento</h1>
-    <h2>Cabecera fija vs cabecera pegajosa</h2>
+    <h2 id="cabeceras">Cabecera fija vs cabecera pegajosa</h2>
+    <br>
+    <a href="positions-examples.html#temario-css">☝️</a>
+    <hr>
 
-    <h2>Efecto sticky tipo slides</h2>
+    <h2 id="sticky">Efecto sticky tipo slides</h2>
     <section class="slides">
         <article class="slide">
             <h3 class="slide-title">Titulo de la sección</h3> 
@@ -159,8 +171,11 @@
             </div>
         </article>
     </section>
+    <br>
+    <a href="positions-examples.html#temario-css">☝️</a>
+    <hr>
 
-    <h2>Efecto de ventana modal / menú movil</h2>
+    <h2 id="ventana-modal">Efecto de ventana modal / menú movil</h2>
     <article id="modal-1" class="modal-window">
         <h3 class="modal-title">Ventana modal</h3>
         <div class="modal-content">
@@ -177,9 +192,20 @@
         <a href="#cerrar">Cerrar modal</a>
     </article>
     <a href="#modal-1" class="modal-link">Abrir modal</a>
+    <br><br>
+
+    <a href="positions-examples.html#temario-css">☝️</a>
+    <hr>
+
+
+    <h2 id="margenes-negativos">Márgenes negativos</h2>
+    <div class="box">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda fugiat amet quidem nisi quis eum, corporis, voluptatum similique incidunt ipsam odit? Voluptatem similique laboriosam placeat qui nemo numquam iusto a.
+    </div>
+    <a href="positions-examples.html#temario-css">☝️</a>
+    <hr>
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
 </body>
 </html>
