--- a/video-css-3/colors.html
+++ b/video-css-3/colors.html
@@ -13,27 +13,41 @@
 
     <h2 id="temario-css">Temario del curso</h2>
     <ul>
-        <li><a href="colors.html#"></a></li>
-        <li><a href="colors.html#"></a></li>
+        <li><a href="colors.html#by-name">Color por nombre</a></li>
+        <li><a href="colors.html#hex">Colores Hexadecimal</a></li>
+        <li><a href="colors.html#rgb">Colore RGB</a></li>
     </ul>
     <br>
 
-    <h2>Color por nombre</h2>
+    <h2 id="by-name">Color por nombre</h2>
     <div class="color-by-name">
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
         </p>
     </div>
+    <br>
+    <a href="colors.html#temario-css">☝️</a>
+    <hr>
 
-    <h2>Colores hexadecimal</h2>
+    <h2 id="hex">Colores hexadecimal</h2>
     <div class="color-hex">
         <p>
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
         </p>
     </div>
-
     <br>
     <a href="colors.html#temario-css">☝️</a>
     <hr>
+
+    <h2 id="rgb">Colores rgb</h2>
+    <div class="color-rgb">
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
+        </p>
+    </div>
+    <br>
+    <a href="colors.html#temario-css">☝️</a>
+    <hr>
+
 </body>
 </html>
