--- a/video-css-3/colors.html
+++ b/video-css-3/colors.html
@@ -16,6 +16,7 @@
         <li><a href="colors.html#by-name">Color por nombre</a></li>
         <li><a href="colors.html#hex">Colores Hexadecimal</a></li>
         <li><a href="colors.html#rgb">Colore RGB</a></li>
+        <li><a href="colors.html#hsl">Colore HSL</a></li>
     </ul>
     <br>
 
@@ -45,6 +46,17 @@
             Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
         </p>
     </div>
+    <br>
+    <a href="colors.html#temario-css">☝️</a>
+    <hr>
+
+    <h2 id="hsl">Colores HSL</h2>
+    <div class="color-hsl">
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
+        </p>
+    </div>
+    <img src="assets/HSL-wheel.jpg" alt="Circulo cromático">
     <br>
     <a href="colors.html#temario-css">☝️</a>
     <hr>
