color-transparent and currentColor

--- a/video-css-3/colors.html
+++ b/video-css-3/colors.html
@@ -61,5 +61,19 @@
     <a href="colors.html#temario-css">☝️</a>
     <hr>
 
+    <h2 id="transparent-current">Valores transparent & currentColor</h2>
+    <section style="color: red;">
+        <div class="color-transparent-current">
+            <p>
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
+            </p>
+        </div>
+    </section>
+    
+
+    <a href="colors.html#temario-css">☝️</a>
+    <hr>
+    <br><br><br>
+
 </body>
 </html>
