--- a/video-css-3/colors.html
+++ b/video-css-3/colors.html
@@ -15,8 +15,10 @@
     <ul>
         <li><a href="colors.html#by-name">Color por nombre</a></li>
         <li><a href="colors.html#hex">Colores Hexadecimal</a></li>
-        <li><a href="colors.html#rgb">Colore RGB</a></li>
-        <li><a href="colors.html#hsl">Colore HSL</a></li>
+        <li><a href="colors.html#rgb">Colores RGB</a></li>
+        <li><a href="colors.html#hsl">Colores HSL</a></li>
+        <li><a href="colors.html#transparent-current">Valores transparent & currentColor</a></li>
+        <li><a href="colors.html#opacity">Propiedad opacity</a></li>
     </ul>
     <br>
 
@@ -70,10 +72,18 @@
         </div>
     </section>
     
+    <h2 id="opacity">Propiedad opacity</h2>
+    <div class="opacity">
+        <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eveniet quisquam architecto perferendis saepe similique porro veritatis, voluptas sint, nulla distinctio odio fugit numquam animi. Neque, excepturi ea. Ut, expedita doloremque?
+        </p>
+    </div>
+    <img class="opacity-20" src="assets/HSL-wheel.jpg" alt="Circulo cromático">
+    <br>
 
     <a href="colors.html#temario-css">☝️</a>
     <hr>
-    <br><br><br>
+    <br>
 
 </body>
 </html>
